# fat-archive-tools

./: .gitignore  Cargo.toml  README.md
crates/fat/: Cargo.toml
crates/fat-checksum/: Cargo.toml
crates/fat-checksum/src/: blake3.rs  lib.rs  sha256.rs  xxh3.rs
crates/fat-hasher/: Cargo.toml
crates/fat-hasher/src/: checksum.rs  lib.rs
crates/fat-imfs/: Cargo.toml
crates/fat-imfs/benches/: imfs_inner.rs  walkdir.rs
crates/fat-imfs/src/: handle.rs  inner.rs  lib.rs  main.rs  node.rs  snapshot.rs  store.rs  vfs_impl.rs
crates/fat-imfs/src/node/: mod.rs  store.rs  structs.rs
crates/fat-imfs/tests/: vfs.rs
crates/fat-imfs/tests/common/: mod.rs
crates/fat-parallel-iter/: Cargo.toml
crates/fat-parallel-iter/src/: lib.rs
crates/fat-stdfs/: Cargo.toml
crates/fat-stdfs/src/: handle.rs  lib.rs  util.rs
crates/fat-vfs/: Cargo.toml
crates/fat-vfs-harness/: Cargo.toml
crates/fat-vfs-harness/src/: lib.rs
crates/fat-vfs/src/: lib.rs  snapshot.rs  std.rs  std_impl.rs
crates/fat-walkdir/: Cargo.toml
crates/fat-walkdir/src/: entry.rs  lib.rs
crates/fat/src/: lib.rs  main.rs
