[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = []
edition = "2024"
license = ""
publish = false
repository = ""
version = "0.1.0"

[workspace.dependencies]
hex = "0.4.3"
mockall = "0.14.0"
thiserror = "2.0.18"
typed-path = "0.12.3"

# Applying small optimizations for crypto crates
[profile.dev.package.block-buffer]
opt-level = 3

[profile.dev.package.crpyto-common]
opt-level = 3

[profile.dev.package.digest]
opt-level = 3

[profile.dev.package.hybrid-array]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.xxhash-rust]
opt-level = 3
