[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = []
edition = "2024"
license = ""
publish = false
repository = ""
version = "0.1.0"

[workspace.dependencies]
crossbeam = "0.8.4"
dashmap = "6.2.1"
divan = "0.1.21"
hex = "0.4.3"
mockall = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
typed-path = "0.12.3"
