[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = []
edition = "2024"
license = ""
publish = false
repository = ""
version = "0.1.0"

[workspace.dependencies]
crossbeam = "0.8.4"
dashmap = "6.2.1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
