[package]
name = "fat-imfs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossbeam = "0.8.4"
dashmap = "6.2.1"
fat-hasher = { path = "../fat-hasher" }
fat-vfs = { path = "../fat-vfs" }
typed-path = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde = { workspace = true }
serde_json = "1.0.150"
