[package]
name = "fat-imfs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossbeam = { workspace = true }
dashmap = { workspace = true }
fat-checksum = { path = "../fat-checksum" }
fat-vfs = { path = "../fat-vfs" }
serde = { workspace = true }
typed-path = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde = { workspace = true }
serde_json = "1.0.150"
