[package]
name = "fat-stdfs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fat-hasher = { path = "../fat-hasher" }
fat-vfs = { path = "../fat-vfs" }
thiserror = { workspace = true }
typed-path = { workspace = true }
