[package]
name = "fat-stdfs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fat-checksum = { path = "../fat-checksum" }
fat-vfs = { path = "../fat-vfs" }
typed-path = { workspace = true }
walkdir = "2.5.0"
