[package]
name = "fat-stdfs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fat-checksum = { path = "../fat-checksum" }
fat-vfs = { path = "../fat-vfs" }
memmap = "0.7.0"
typed-path = { workspace = true }
walkdir = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }
