[package]
name = "fat-vfs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = "2.13.0"
fat-hasher = { path = "../fat-hasher" }
fs2 = "0.4.3"
typed-path = { workspace = true }
