[package]
name = "fat-vfs"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = { version = "2.13.0", features = ["serde"] }
fat-hasher = { path = "../fat-hasher" }
fs2 = "0.4.3"
serde = { workspace = true }
typed-path = { workspace = true }
