[package]
name = "fat"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fat-hasher = { path = "../fat-hasher" }
fat-imfs = { path = "../fat-imfs" }
fat-vfs = { path = "../fat-vfs" }
serde_json = "1.0.150"
