[package]
name = "fat"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossbeam = { workspace = true }
fat-imfs = { path = "../fat-imfs" }
fat-stdfs = { path = "../fat-stdfs" }
fat-vfs = { path = "../fat-vfs" }
typed-path = { workspace = true }
