[package]
name = "fat"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossbeam = { workspace = true }
dashmap = { workspace = true }
fat-checksum = { path = "../fat-checksum" }
fat-imfs = { path = "../fat-imfs" }
fat-parallel-iter = { path = "../fat-parallel-iter" }
fat-stdfs = { path = "../fat-stdfs" }
fat-vfs = { path = "../fat-vfs" }
fat-walkdir = { path = "../fat-walkdir" }
typed-path = { workspace = true }
